unpackaged/objects/Call_Recording__c.object
<CustomObject>
  <description>Link to Encore call recording</description>
  <fields>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account name the recording is associated with</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Call Recordings</relationshipLabel>
    <relationshipName>Call_Recordings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Call_Direction__c</fullName>
    <description>The direction of the call</description>
    <inlineHelpText>The direction of the call</inlineHelpText>
    <label>Call Direction</label>
    <length>8</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Call_Type__c</fullName>
    <description>The type of call</description>
    <inlineHelpText>The type of call</inlineHelpText>
    <label>Call Type</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Call Recordings</relationshipLabel>
    <relationshipName>Call_Recordings</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Duration__c</fullName>
    <description>The duration of the call in seconds</description>
    <inlineHelpText>The duration of the call in seconds.</inlineHelpText>
    <label>Duration (secs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OpportunityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the opportunity name the recording is associated with</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Call Recordings</relationshipLabel>
    <relationshipName>Call_Recordings</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Recorded_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recorded Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Call Recordings</relationshipLabel>
    <relationshipName>Call_Recordings</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Recorded_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recorded User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Recordings</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>RecordingIndex__c</fullName>
    <externalId>true</externalId>
    <label>RecordingIndex</label>
    <length>21</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Recording_Date__c</fullName>
    <label>Recording Date</label>
    <required>true</required>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Recording_URL__c</fullName>
    <label>Recording URL</label>
    <required>true</required>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Task_Name__c</fullName>
    <label>Task Subject</label>
    <length>250</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Task_URL__c</fullName>
    <label>Task Link</label>
    <type>Url</type>
  </fields>
  <label>Call Recording</label>
  <nameField>
    <displayFormat>{0000}</displayFormat>
    <label>Call Recording Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Call Recordings</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>